--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "node-notifier": "^5.1.2",
     "os-locale": "^2.1.0",
     "proxy-agent": "^2.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "read-last-lines": "^1.3.0",
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
