--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
     "spellchecker": "^3.4.4",
+    "typescript": "^2.7.1",
     "websocket": "^1.0.25"
   },
   "devDependencies": {
