--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "bunyan": "^1.8.12",
+    "classnames": "^2.2.5",
     "config": "^1.28.1",
     "electron-config": "^1.0.0",
     "electron-editor-context-menu": "^1.1.1",
