--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build-release": "SIGNAL_ENV=production npm run build -- --config.directories.output=release",
     "build-mas-release": "npm run build-release -- -m --config.mac.target=mas",
     "build-mas-dev": "npm run build-release -- -m --config.mac.target=mas --config.type=development",
+    "build-react": "tsc --watch --module es2015 --jsx react js/react/components/*.tsx js/react/*.ts",
     "prep-mac-release": "npm run build-release -- -m --dir",
     "prep-release": "npm run generate && grunt prep-release && npm run build-release && npm run build-mas-release && grunt test-release",
     "release-mac": "npm run build-release -- -m --prepackaged release/mac/Signal*.app --publish=always",
