--- a/package.json
+++ b/package.json
@@ -108,6 +108,8 @@
     "node-sass-import-once": "^1.2.0",
     "nsp": "^3.2.1",
     "nyc": "^11.4.1",
+    "pulp": "^12.0.1",
+    "purescript": "^0.11.7",
     "sinon": "^4.4.2",
     "spectron": "^3.8.0"
   },
