--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "purescript-prelude": "^3.1.1",
     "purescript-console": "^3.0.0",
-    "purescript-promises": "^1.0.1"
+    "purescript-promises": "^1.0.1",
+    "purescript-indexeddb": "^3.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
