--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -10,7 +10,9 @@
     "purescript-prelude": "^3.1.1",
     "purescript-console": "^3.0.0",
     "purescript-promises": "^1.0.1",
-    "purescript-indexeddb": "^3.0.0"
+    "purescript-indexeddb": "^3.0.0",
+    "purescript-nullable": "^3.0.0",
+    "purescript-foreign": "^4.0.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
