--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -13,7 +13,8 @@
     "purescript-nullable": "^3.0.0",
     "purescript-prelude": "^3.1.1",
     "purescript-promises": "^1.0.1",
-    "purescript-record-show": "^0.4.0"
+    "purescript-record-show": "^0.4.0",
+    "purescript-arraybuffer": "^6.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
