--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -14,7 +14,8 @@
     "purescript-prelude": "^3.1.1",
     "purescript-promises": "^1.0.1",
     "purescript-record-show": "^0.4.0",
-    "purescript-arraybuffer": "^6.0.0"
+    "purescript-arraybuffer": "^6.0.0",
+    "purescript-halogen": "v2.3.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
