--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -16,7 +16,8 @@
     "purescript-record-show": "^0.4.0",
     "purescript-arraybuffer": "^6.0.0",
     "purescript-halogen": "v2.3.0",
-    "purescript-debug": "^3.0.0"
+    "purescript-debug": "^3.0.0",
+    "purescript-aff-promise": "v0.7.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
