Add `purescript-halogen-css` dependency

--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -17,7 +17,8 @@
     "purescript-arraybuffer": "^6.0.0",
     "purescript-halogen": "v2.3.0",
     "purescript-debug": "^3.0.0",
-    "purescript-aff-promise": "v0.7.0"
+    "purescript-aff-promise": "v0.7.0",
+    "purescript-halogen-css": "v6.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
