--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -18,7 +18,8 @@
     "purescript-halogen": "v2.3.0",
     "purescript-debug": "^3.0.0",
     "purescript-aff-promise": "v0.7.0",
-    "purescript-halogen-css": "v6.0.0"
+    "purescript-halogen-css": "v6.0.0",
+    "purescript-nonempty": "^4.2.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
