--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -7,20 +7,20 @@
     "output"
   ],
   "dependencies": {
+    "purescript-aff-promise": "v0.7.0",
+    "purescript-arraybuffer": "^6.0.0",
     "purescript-console": "^3.0.0",
+    "purescript-debug": "^3.0.0",
     "purescript-foreign": "^4.0.1",
+    "purescript-halogen": "v2.3.0",
+    "purescript-halogen-css": "v6.0.0",
     "purescript-indexeddb": "^3.0.0",
+    "purescript-maps": "^3.6.0",
+    "purescript-nonempty": "^4.2.0",
     "purescript-nullable": "^3.0.0",
     "purescript-prelude": "^3.1.1",
     "purescript-promises": "^1.0.1",
-    "purescript-record-show": "^0.4.0",
-    "purescript-arraybuffer": "^6.0.0",
-    "purescript-halogen": "v2.3.0",
-    "purescript-debug": "^3.0.0",
-    "purescript-aff-promise": "v0.7.0",
-    "purescript-halogen-css": "v6.0.0",
-    "purescript-nonempty": "^4.2.0",
-    "purescript-maps": "^3.6.0"
+    "purescript-record-show": "^0.4.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
